# file_watch

./: .gitignore  Cargo.toml  README.md
examples/: async_watch.rs  watch_changes.rs
src/: errors.rs  lib.rs  utils.rs  watcher.rs
