[package]
name = "file_watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
libc = "0.2.126"
tokio = { version = "1", optional = true, features = ["fs", "io-util"]}

[features]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
